# oddscraper

./: .gitignore  1  DATA_FETCHING_GUIDE.md  DRAFTKINGS_GUIDE.md  README.md  app.py  consolidate_odds.py  consolidated_odds.csv  convert_dk_json_to_csv.py  cross_bets_matrix.csv  debug_output.txt  fetch_betmgm.py  fetch_caesars.py  fetch_dk_playwright.py  fetch_fanduel.py  fetch_kalshi.py  fetch_pointsbet.py  filelist.txt  filtered_markets.csv  guide.md  normalizer.py  process_pointsbet_data.py  pyproject.toml  run_e2e_pipeline.py  sports_only.csv  task.md  verify_vig_breakdown.py
downloads/: consolidated_odds_20260212_022723.csv
downloads/history/20260212_022723/: fanduel.csv  kalshi.csv  metadata.json  pointsbet.csv  polymarket.csv
downloads/history/20260213_010443/: fanduel.csv  kalshi.csv  metadata.json  pointsbet.csv  polymarket.csv
downloads/history/20260216_011816/: consolidated_odds.csv  fanduel.csv  metadata.json  polymarket.csv
draftkings_data/: dk_all_sports.json
fanduel_data/: fd_moneyline_odds.csv
kalshi_data/: kalshi_odds.csv
pm_universe/: __init__.py  __main__.py  cli.py  clob.py  filters.py  gamma.py  io_store.py  kalshi.py  kalshi_runner.py  models.py  runner.py  utils.py
pointsbet_data/: pointsbet_odds.csv  pointsbet_scraped.json
utils/: odds_conversion.py
