[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm_universe"
version = "0.1.0"
description = "Polymarket Universe Daily Pricing Snapshot Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
    "kalshi-python>=1.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
]

[project.scripts]
pm-universe = "pm_universe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pm_universe*"]
